--- a/fdphd.bib
+++ b/fdphd.bib
@@ -822,11 +822,8 @@ Terahertz spectroscopy of ferroelectrics and related materials
   publisher={AIP Publishing}
 }
 
-
-
 %  -- Homogenisation: misc --
  	 	Jelinek2010 Fishnet homogenization
-
 
 %% TODO understand what this is about
 @article{hasar2009new,
@@ -2039,6 +2036,26 @@ lts.fzu.cz/pdf/d-js.pdf
   pages={11730},
   year={1993},
   publisher={APS}
+}
+@article{silveirinha2007metamaterial,
+  title={Metamaterial homogenization approach with application to the characterization of microstructured composites with negative parameters},
+  author={Silveirinha, M{\'a}rio G},
+  journal={Physical Review B},
+  volume={75},
+  number={11},
+  pages={115104},
+  year={2007},
+  publisher={APS}
+}
+@article{fietz2010current,
+  title={Current-driven metamaterial homogenization},
+  author={Fietz, Chris and Shvets, Gennady},
+  journal={Physica B: Condensed Matter},
+  volume={405},
+  number={14},
+  pages={2930--2934},
+  year={2010},
+  publisher={Elsevier}
 }
 @phdthesis{fietz2011homogenization,
   title={Homogenization of metamaterials with spatial dispersion},
